--- a/publication/journal-article/cite.bib
+++ b/publication/journal-article/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{nightingale2019ten,
+  title={Ten priority science gaps in assessing climate data record quality},
+  author={Nightingale, Joanne and Mittaz, Jonathan PD and Douglas, Sarah and Dee, Dick and Ryder, James and Taylor, Michael and Old, Christopher and Dieval, Catherine and Fouron, Celine and Duveau, Guillaume and others},
+  journal={Remote Sensing},
+  volume={11},
+  number={8},
+  pages={986},
+  year={2019},
+  publisher={Multidisciplinary Digital Publishing Institute}
 }
