Fixed some page range field biblio entries

--- a/citations.normalized.bib
+++ b/citations.normalized.bib
@@ -57,7 +57,7 @@
 }
 
 @article{mitchell_bristol_2022,
-  author = {Mitchell, Dann M. and Stone, Emma J. and Andrews, Oliver D. and Bamber, Jonathan L. and Bingham, Rory J. and Browse, Jo and Henry, Matthew and MacLeod, David M. and Morten, Joanne M. and Sauter, Christoph A. and Smith, Christopher J. and Thomas, James and Thomson, Stephen I. and Wilson, Jamie D. and Participants, the Bristol CMIP6 Data Hackathon},
+  author = {Mitchell, Dann M. and Stone, Emma J. and Andrews, Oliver D. and Bamber, Jonathan L. and Bingham, Rory J. and Browse, Jo and Henry, Matthew and MacLeod, David M. and Morten, Joanne M. and Sauter, Christoph A. and Smith, Christopher J. and Thomas, James and Thomson, Stephen I. and Wilson, Jamie D. and, the Bristol CMIP6 Data Hackathon Participants},
   title = {The Bristol CMIP6 Data Hackathon},
   year = {2022},
   journal = {Weather},
@@ -80,8 +80,8 @@
   year = {2019},
   journal = {Scientific Data},
   volume = {6},
-  number = {1},
-  pages = {223},
+  number = {223},
+  pages = {1--18},
   doi = {10.1038/s41597-019-0236-x},
   url = {https://www.nature.com/articles/s41597-019-0236-x},
   month = {oct},
@@ -101,8 +101,8 @@
   year = {2019},
   journal = {Scientific Reports},
   volume = {9},
-  number = {1},
-  pages = {13788},
+  number = {13788},
+  pages = {1--10},
   doi = {10.1038/s41598-019-50177-1},
   url = {https://www.nature.com/articles/s41598-019-50177-1},
   month = {sep},
@@ -116,20 +116,14 @@
   urldate = {2025-11-01}
 }
 
-@misc{noauthor_ten_nodate,
-  title = {Ten Priority Science Gaps in Assessing Climate Data Record Quality},
-  url = {https://www.mdpi.com/2072-4292/11/8/986},
-  urldate = {2025-11-01}
-}
-
 @article{nightingale_ten_2019,
   author = {Nightingale, Joanne and Mittaz, Jonathan P. D. and Douglas, Sarah and Dee, Dick and Ryder, James and Taylor, Michael and Old, Christopher and Dieval, Catherine and Fouron, Celine and Duveau, Guillaume and Merchant, Christopher},
   title = {Ten Priority Science Gaps in Assessing Climate Data Record Quality},
   year = {2019},
   journal = {Remote Sensing},
   volume = {11},
-  number = {8},
-  pages = {986},
+  number = {986},
+  pages = {1--21},
   doi = {10.3390/rs11080986},
   url = {https://www.mdpi.com/2072-4292/11/8/986},
   month = {jan},
@@ -143,31 +137,7 @@
   urldate = {2025-11-01}
 }
 
-@misc{noauthor_sparc_nodate,
-  title = {SPARC Report No.9 \textbar APARC},
-  url = {https://www.aparc-climate.org/publications/sparc-reports/sparc-report-no-9/},
-  file = {Snapshot:C\:\\Users\\patte\\Zotero\\storage\\U9K9LYL2\\sparc-report-no-9.html:text/html},
-  language = {en-US},
-  urldate = {2025-11-01}
-}
-
-@misc{petropavlovskikh_sparcio3cgaw_2019,
-  author = {Petropavlovskikh, Irina and Godin-Beekmann, Sophie and Hubert, Daan and Damadeo, Robert and Hassler, Birgit and Sofieva, Viktoria},
-  title = {SPARC/IO3C/GAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere},
-  year = {2019},
-  doi = {10.17874/f899e57a20b},
-  url = {https://www.sparc-climate.org/publications/sparc-reports/sparc-report-no-9/},
-  month = {feb},
-  note = {ISSN: 2296-5785 Num Pages: 99 Number: 9},
-  abstract = {This Report summarises the main results obtained during the first year of the LOTUS activity, which was targeted at providing timely inputs to the 2018 WMO/UNEP Ozone Assessment. This deadline defined the scope of this Report and focused the LOTUS activities primarily on changes in ozone levels in the middle and the upper stratosphere outside the polar regions as observed by merged satellite records. These studies were complemented by an analysis of ground-based data and recent model data provided by the CCMI (Morgenstern et al., 2017). The short timeline of this work necessitated leaving several pressing topics for the second phase of LOTUS, most notably: the significance of recent trends in the lower stratosphere, the attribution of trends to ODSs and GHGs using model data, and estimates of trends in the polar regions.},
-  file = {Full Text PDF:C\:\\Users\\patte\\Zotero\\storage\\6KFLA5CZ\\Petropavlovskikh et al. - 2019 - SPARCIO3CGAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere.pdf:application/pdf;Snapshot:C\:\\Users\\patte\\Zotero\\storage\\TSU3DUAP\\sparc-report-no-9.html:text/html},
-  copyright = {cc\_by\_nc\_nd},
-  language = {en},
-  type = {Monograph},
-  urldate = {2025-11-01}
-}
-
-@techreport{petropavlovskikh_sparcio3cgaw_2019-1,
+@techreport{petropavlovskikh_sparcio3cgaw_2019,
   author = {Petropavlovskikh, Irina and Godin-Beekmann, Sophie and Hubert, Daan and Damadeo, Robert and Hassler, Birgit and Sofieva, Viktoria},
   title = {SPARC/IO3C/GAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere},
   year = {2019},
@@ -183,21 +153,14 @@
   urldate = {2025-11-01}
 }
 
-@misc{noauthor_earth-observation-based_nodate,
-  title = {Earth-Observation-Based Estimation and Forecasting of Particulate Matter Impact on Solar Energy in Egypt},
-  url = {https://www.mdpi.com/2072-4292/10/12/1870},
-  file = {Earth-Observation-Based Estimation and Forecasting of Particulate Matter Impact on Solar Energy in Egypt:C\:\\Users\\patte\\Zotero\\storage\\6NAYHQSK\\1870.html:text/html},
-  urldate = {2025-11-01}
-}
-
 @article{kosmopoulos_earth-observation-based_2018,
   author = {Kosmopoulos, Panagiotis G. and Kazadzis, Stelios and El-Askary, Hesham and Taylor, Michael and Gkikas, Antonis and Proestakis, Emmanouil and Kontoes, Charalampos and El-Khayat, Mohamed Mostafa},
   title = {Earth-Observation-Based Estimation and Forecasting of Particulate Matter Impact on Solar Energy in Egypt},
   year = {2018},
   journal = {Remote Sensing},
   volume = {10},
-  number = {12},
-  pages = {1870},
+  number = {1870},
+  pages = {1-23},
   doi = {10.3390/rs10121870},
   url = {https://www.mdpi.com/2072-4292/10/12/1870},
   month = {dec},
@@ -303,23 +266,6 @@
   urldate = {2025-11-01}
 }
 
-@article{koukouli_anthropogenic_2016,
-  author = {Koukouli, M. E. and Balis, D. S. and van der A, Ronald Johannes and Theys, N. and Hedelt, P. and Richter, A. and Krotkov, N. and Li, C. and Taylor, M.},
-  title = {Anthropogenic sulphur dioxide load over China as observed from different satellite sensors},
-  year = {2016},
-  journal = {Atmospheric Environment},
-  volume = {145},
-  pages = {45--59},
-  doi = {10.1016/j.atmosenv.2016.09.007},
-  url = {https://www.sciencedirect.com/science/article/pii/S1352231016307087},
-  month = {nov},
-  abstract = {China, with its rapid economic growth and immense exporting power, has been the focus of many studies during this previous decade quantifying its increasing emissions contribution to the Earth's atmosphere. With a population slowly shifting towards enlarged power and purchasing needs, the ceaseless inauguration of new power plants, smelters, refineries and industrial parks leads infallibly to increases in sulphur dioxide, SO2, emissions. The recent capability of next generation algorithms as well as new space-borne instruments to detect anthropogenic SO2 loads has enabled a fast advancement in this field. In the following work, algorithms providing total SO2 columns over China based on SCIAMACHY/Envisat, OMI/Aura and GOME2/MetopA observations are presented. The need for post-processing and gridding of the SO2 fields is further revealed in this work, following the path of previous publications. Further, it is demonstrated that the usage of appropriate statistical tools permits studying parts of the datasets typically excluded, such as the winter months loads. Focusing on actual point sources, such as megacities and known power plant locations, instead of entire provinces, monthly mean time series have been examined in detail. The sharp decline in SO2 emissions in more than 90\%–95\% of the locations studied confirms the recent implementation of government desulphurisation legislation; however, locations with increases, even for the previous five years, are also identified. These belong to provinces with emerging economies which are in haste to install power plants and are possibly viewed leniently by the authorities, in favour of growth. The SO2 load seasonality has also been examined in detail with a novel mathematical tool, with 70\% of the point sources having a statistically significant annual cycle with highs in winter and lows in summer, following the heating requirements of the Chinese population.},
-  keywords = {OMI, China, GOME2A, Satellite remote sensing, SCIAMACHY, Seasonality, Sulphur dioxide, Trends},
-  file = {ScienceDirect Snapshot:C\:\\Users\\patte\\Zotero\\storage\\S4BYMJ7C\\S1352231016307087.html:text/html},
-  issn = {1352-2310},
-  urldate = {2025-11-01}
-}
-
 @article{zempila_modeling_2016,
   author = {Zempila, Melina-Maria and Taylor, Michael and Bais, Alkiviadis and Kazadzis, Stelios},
   title = {Modeling the relationship between photosynthetically active radiation and global horizontal irradiance using singular spectrum analysis},
@@ -337,6 +283,23 @@
   urldate = {2025-11-01}
 }
 
+@article{koukouli_anthropogenic_2016,
+  author = {Koukouli, M. E. and Balis, D. S. and van der A, Ronald Johannes and Theys, N. and Hedelt, P. and Richter, A. and Krotkov, N. and Li, C. and Taylor, M.},
+  title = {Anthropogenic sulphur dioxide load over China as observed from different satellite sensors},
+  year = {2016},
+  journal = {Atmospheric Environment},
+  volume = {145},
+  pages = {45--59},
+  doi = {10.1016/j.atmosenv.2016.09.007},
+  url = {https://www.sciencedirect.com/science/article/pii/S1352231016307087},
+  month = {nov},
+  abstract = {China, with its rapid economic growth and immense exporting power, has been the focus of many studies during this previous decade quantifying its increasing emissions contribution to the Earth's atmosphere. With a population slowly shifting towards enlarged power and purchasing needs, the ceaseless inauguration of new power plants, smelters, refineries and industrial parks leads infallibly to increases in sulphur dioxide, SO2, emissions. The recent capability of next generation algorithms as well as new space-borne instruments to detect anthropogenic SO2 loads has enabled a fast advancement in this field. In the following work, algorithms providing total SO2 columns over China based on SCIAMACHY/Envisat, OMI/Aura and GOME2/MetopA observations are presented. The need for post-processing and gridding of the SO2 fields is further revealed in this work, following the path of previous publications. Further, it is demonstrated that the usage of appropriate statistical tools permits studying parts of the datasets typically excluded, such as the winter months loads. Focusing on actual point sources, such as megacities and known power plant locations, instead of entire provinces, monthly mean time series have been examined in detail. The sharp decline in SO2 emissions in more than 90\%–95\% of the locations studied confirms the recent implementation of government desulphurisation legislation; however, locations with increases, even for the previous five years, are also identified. These belong to provinces with emerging economies which are in haste to install power plants and are possibly viewed leniently by the authorities, in favour of growth. The SO2 load seasonality has also been examined in detail with a novel mathematical tool, with 70\% of the point sources having a statistically significant annual cycle with highs in winter and lows in summer, following the heating requirements of the Chinese population.},
+  keywords = {OMI, China, GOME2A, Satellite remote sensing, SCIAMACHY, Seasonality, Sulphur dioxide, Trends},
+  file = {ScienceDirect Snapshot:C\:\\Users\\patte\\Zotero\\storage\\S4BYMJ7C\\S1352231016307087.html:text/html},
+  issn = {1352-2310},
+  urldate = {2025-11-01}
+}
+
 @article{taylor_particulate_2016,
   author = {Taylor, Michael and Retalis, Adrianos and Flocas, Helena A.},
   title = {Particulate Matter Estimation from Photochemistry: A Modelling Approach Using Neural Networks and Synoptic Clustering},
@@ -351,26 +314,6 @@
   abstract = {We report on the development and validation of a neural network (NN) model of PM10 concentrations in terms of photochemical measurements of NO, NO2 and O3 and temporal parameters that include the day of the week and the day of the year with its sinusoidal variation. A long-term record (≈10 yr) from 2001–2012 (inclusive) assembled from measurements taken at 10 station nodes in the air quality monitoring network of the Greater Athens Area in Greece has been used. Eight synoptic categorizations of the circulation at 850 hPa were used to partition the data record, and to train individual NNs with Bayesian regularization using 90\% of available data for different atmospheric conditions. The time series of PM10 estimates was then reconstructed from the partitioned output. As a control, a NN without synoptic clustering was trained on the same data. The remaining 10\% of the data was used for testing the simulation performance. NN models with synoptic clustering achieved an average root mean square error (RMSE) ≈ 16 µg m-3 across the station nodes with an average index of agreement (IA) of 0.71 (somewhat better than the control network whose performance statistics were RMSE ≈ 17 µg m-3 and IA = 0.61, respectively). For routine measurements below the EU Air Quality Directive limit value of 50 µg m-3, the average error is as low as RMSE ≈ 11 µg m-3 across the station nodes. NN models were found to strongly outperform analogous MLR models over all station nodes.},
   keywords = {Neural networks, Air quality, Particulate matter, Photochemistry, Synoptic classification},
   file = {Accepted Version:C\:\\Users\\patte\\Zotero\\storage\\P9VUKZYT\\Taylor et al. - 2016 - Particulate Matter Estimation from Photochemistry A Modelling Approach Using Neural Networks and Sy.pdf:application/pdf},
-  issn = {2071-1409},
-  language = {en},
-  shorttitle = {Particulate Matter Estimation from Photochemistry},
-  urldate = {2025-11-01}
-}
-
-@article{taylor_particulate_2016-1,
-  author = {Taylor, Michael and Retalis, Adrianos and Flocas, Helena A.},
-  title = {Particulate Matter Estimation from Photochemistry: A Modelling Approach Using Neural Networks and Synoptic Clustering},
-  year = {2016},
-  journal = {Aerosol and Air Quality Research},
-  volume = {16},
-  number = {9},
-  pages = {2067--2084},
-  doi = {10.4209/aaqr.2015.07.0481},
-  url = {https://doi.org/10.4209/aaqr.2015.07.0481},
-  month = {sep},
-  abstract = {We report on the development and validation of a neural network (NN) model of PM10 concentrations in terms of photochemical measurements of NO, NO2 and O3 and temporal parameters that include the day of the week and the day of the year with its sinusoidal variation. A long-term record (≈10 yr) from 2001–2012 (inclusive) assembled from measurements taken at 10 station nodes in the air quality monitoring network of the Greater Athens Area in Greece has been used. Eight synoptic categorizations of the circulation at 850 hPa were used to partition the data record, and to train individual NNs with Bayesian regularization using 90\% of available data for different atmospheric conditions. The time series of PM10 estimates was then reconstructed from the partitioned output. As a control, a NN without synoptic clustering was trained on the same data. The remaining 10\% of the data was used for testing the simulation performance. NN models with synoptic clustering achieved an average root mean square error (RMSE) ≈ 16 µg m-3 across the station nodes with an average index of agreement (IA) of 0.71 (somewhat better than the control network whose performance statistics were RMSE ≈ 17 µg m-3 and IA = 0.61, respectively). For routine measurements below the EU Air Quality Directive limit value of 50 µg m-3, the average error is as low as RMSE ≈ 11 µg m-3 across the station nodes. NN models were found to strongly outperform analogous MLR models over all station nodes.},
-  keywords = {Neural networks, Air quality, Particulate matter, Photochemistry, Synoptic classification},
-  file = {Accepted Version:C\:\\Users\\patte\\Zotero\\storage\\DWRXMI49\\Taylor et al. - 2016 - Particulate Matter Estimation from Photochemistry A Modelling Approach Using Neural Networks and Sy.pdf:application/pdf},
   issn = {2071-1409},
   language = {en},
   shorttitle = {Particulate Matter Estimation from Photochemistry},
